--- a/src/main/java/projects/encryptor/gui/CryptographerGUI.fxml
+++ b/src/main/java/projects/encryptor/gui/CryptographerGUI.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="900.0" style="-fx-background-color: linear-gradient(#999999, #595959, #999999);;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="projects.encryptor.gui.FXMLController">
+<VBox id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="900.0" style="-fx-background-color: linear-gradient(#999999, #595959, #999999);;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="projects.encryptor.gui.CryptographerGUIController">
    <children>
       <MenuBar id="menuBar">
         <menus>
