--- a/src/main/java/projects/encryptor/gui/CryptographerGUI.fxml
+++ b/src/main/java/projects/encryptor/gui/CryptographerGUI.fxml
@@ -1,70 +1,130 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.effect.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXTextArea?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.CheckMenuItem?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<VBox id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="900.0" style="-fx-background-color: linear-gradient(#999999, #595959, #999999);;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="projects.encryptor.gui.CryptographerGUIController">
+<StackPane fx:id="wrapStackPane" prefHeight="700.0" prefWidth="900.0" style="-fx-background-color: #515C6B;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="projects.encryptor.gui.CryptographerGUIController">
    <children>
-      <MenuBar id="menuBar">
-        <menus>
-          <Menu id="fileMenu" mnemonicParsing="false" text="File">
-            <items>
-              <MenuItem id="fileClose" mnemonicParsing="false" onAction="#closeMenuItemOnAction" text="Close" />
-            </items>
-          </Menu>
-          <Menu id="modeMenu" mnemonicParsing="false" text="Mode">
-               <items>
-                  <CheckMenuItem id="modeEncrypt" fx:id="modeEncrypt" mnemonicParsing="false" onAction="#checkMenuItemEncryptOnAction" selected="true" text="Encrypt" />
-                  <CheckMenuItem id="modeDecrypt" fx:id="modeDecrypt" mnemonicParsing="false" onAction="#checkMenuItemDecryptOnAction" text="Decrypt" />
-               </items>
-          </Menu>
-          <Menu id="helpMenu" mnemonicParsing="false" text="Help">
-            <items>
-              <MenuItem id="helpAbout" mnemonicParsing="false" text="About" />
-            </items>
-          </Menu>
-        </menus>
-      </MenuBar>
-      <VBox id="textContent" prefHeight="200.0" prefWidth="100.0" spacing="10.0" VBox.vgrow="ALWAYS">
-         <opaqueInsets>
-            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-         </opaqueInsets>
+      <VBox id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="900.0" style="-fx-background-color: #515C6B;">
          <children>
-            <TextArea id="taPlainText" fx:id="taPlainText" focusTraversable="false" prefHeight="300.0" prefWidth="800.0" promptText="Enter Text" style="-fx-font-size: 22;; -fx-control-inner-background: #cccccc;" wrapText="true" />
-            <TextArea id="taCrypticResult" fx:id="taCrypticResult" focusTraversable="false" prefHeight="250.0" prefWidth="800.0" promptText="Result" style="-fx-font-size: 22; -fx-control-inner-background: #cccccc;" wrapText="true" />
+            <MenuBar id="menuBar" style="-fx-background-color: #515C6B; -fx-base: #515C6B;">
+              <menus>
+                <Menu id="fileMenu" fx:id="fileMenu" mnemonicParsing="false" text="File">
+                  <items>
+                    <MenuItem id="fileClose" mnemonicParsing="false" onAction="#closeMenuItemOnAction" text="Close" />
+                  </items>
+                </Menu>
+                <Menu id="modeMenu" fx:id="modeMenu" mnemonicParsing="false" text="Mode">
+                     <items>
+                        <CheckMenuItem id="modeEncrypt" fx:id="modeEncrypt" mnemonicParsing="false" onAction="#checkMenuItemEncryptOnAction" selected="true" text="Encrypt" />
+                        <CheckMenuItem id="modeDecrypt" fx:id="modeDecrypt" mnemonicParsing="false" onAction="#checkMenuItemDecryptOnAction" text="Decrypt" />
+                     </items>
+                </Menu>
+                <Menu id="helpMenu" fx:id="helpMenu" mnemonicParsing="false" text="Help">
+                  <items>
+                    <MenuItem id="helpAbout" fx:id="helpAbout" mnemonicParsing="false" onAction="#showAboutMenuOnClicked" text="About" />
+                  </items>
+                </Menu>
+              </menus>
+               <padding>
+                  <Insets bottom="3.0" left="15.0" top="3.0" />
+               </padding>
+            </MenuBar>
+            <VBox id="textContent" fx:id="textContent" prefHeight="200.0" prefWidth="100.0" spacing="10.0" VBox.vgrow="ALWAYS">
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <children>
+                  <HBox prefHeight="35.0" prefWidth="200.0">
+                     <children>
+                        <Text fx:id="charCounter" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Character Count: ">
+                           <font>
+                              <Font name="System Bold" size="14.0" />
+                           </font>
+                        </Text>
+                     </children>
+                  </HBox>
+                  <JFXTextArea fx:id="taPlainText" focusColor="WHITE" focusTraversable="false" onKeyPressed="#charCountInspector" pickOnBounds="false" prefHeight="300.0" prefWidth="800.0" promptText="Enter Text:" style="-fx-background-color: #78909C; -fx-text-inner-color: #424242;" unFocusColor="#424242" wrapText="true">
+                     <font>
+                        <Font name="Calibri Bold" size="22.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets />
+                     </VBox.margin>
+                     <padding>
+                        <Insets bottom="7.0" left="7.0" right="7.0" top="7.0" />
+                     </padding>
+                  </JFXTextArea>
+                  <JFXTextArea fx:id="taCrypticResult" editable="false" focusColor="WHITE" prefHeight="250.0" prefWidth="800.0" promptText="Result:" style="-fx-background-color: #78909C; -fx-text-inner-color: #424242;" unFocusColor="#424242" wrapText="true">
+                     <font>
+                        <Font name="Calibri Bold" size="22.0" />
+                     </font>
+                     <padding>
+                        <Insets bottom="7.0" left="7.0" right="7.0" top="7.0" />
+                     </padding>
+                  </JFXTextArea>
+               </children>
+               <padding>
+                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+               </padding>
+            </VBox>
+            <BorderPane id="buttonBar" prefWidth="800.0">
+               <padding>
+                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+               </padding>
+               <left>
+                  <HBox id="buttonUtils" spacing="5.0" BorderPane.alignment="CENTER">
+                     <children>
+                        <JFXButton fx:id="copyBtn" buttonType="RAISED" onMouseClicked="#copyBtnOnMouseClicked" prefHeight="40.0" prefWidth="150.0" ripplerFill="WHITE" style="-fx-background-color: #424242;" text="Copy Result" textFill="WHITE">
+                           <font>
+                              <Font name="Calibri Bold" size="18.0" />
+                           </font>
+                        </JFXButton>
+                        <JFXButton fx:id="pasteBtn" buttonType="RAISED" onMouseClicked="#pasteBtnOnMouseClicked" prefHeight="40.0" prefWidth="150.0" style="-fx-background-color: #424242;" text="Paste to Field" textFill="WHITE">
+                           <font>
+                              <Font name="Calibri Bold" size="18.0" />
+                           </font>
+                        </JFXButton>
+                        <JFXButton fx:id="showHideTextBtn" buttonType="RAISED" onMouseClicked="#showHideTextBtnOnMouseClicked" prefHeight="40.0" prefWidth="150.0" style="-fx-background-color: #424242;" text="Hide Text" textFill="WHITE">
+                           <font>
+                              <Font name="Calibri Bold" size="18.0" />
+                           </font>
+                        </JFXButton>
+                        <JFXButton fx:id="resetBtn" buttonType="RAISED" onMouseClicked="#resetBtnOnMouseClicked" prefHeight="40.0" prefWidth="150.0" style="-fx-background-color: #424242;" text="Reset" textFill="WHITE">
+                           <font>
+                              <Font name="Calibri Bold" size="18.0" />
+                           </font>
+                        </JFXButton>
+                     </children>
+                  </HBox>
+               </left>
+               <right>
+                  <HBox id="encryptSepHBox" BorderPane.alignment="CENTER">
+                     <children>
+                        <JFXButton fx:id="cryptosystemVariableBtn" buttonType="RAISED" onMouseClicked="#cryptosystemVariableBtnOnMouseClicked" prefHeight="40.0" prefWidth="150.0" style="-fx-background-color: #424242;" text="Encrypt" textFill="WHITE">
+                           <font>
+                              <Font name="Calibri Bold" size="18.0" />
+                           </font>
+                        </JFXButton>
+                     </children>
+                  </HBox>
+               </right>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+            </BorderPane>
          </children>
-         <padding>
-            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-         </padding>
       </VBox>
-      <BorderPane id="buttonBar" prefWidth="800.0">
-         <padding>
-            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-         </padding>
-         <left>
-            <HBox id="buttonUtils" spacing="5.0" BorderPane.alignment="CENTER">
-               <children>
-                  <Button id="copyBtn" fx:id="copyBtn" mnemonicParsing="false" onMouseClicked="#copyBtnOnMouseClicked" prefHeight="40.0" prefWidth="150.0" text="Copy Result" textAlignment="CENTER" />
-                  <Button id="pasteBtn" fx:id="pasteBtn" mnemonicParsing="false" onMouseClicked="#pasteBtnOnMouseClicked" prefHeight="40.0" prefWidth="150.0" text="Paste from Clipboard" />
-                  <Button fx:id="showHideTextBtn" mnemonicParsing="false" prefHeight="40.0" prefWidth="150.0" text="Hide Text" />       
-                  <Button id="resetBtn" mnemonicParsing="false" onMouseClicked="#resetBtnOnMouseClicked" prefHeight="40.0" prefWidth="150.0" text="Reset" />
-               </children>
-            </HBox>
-         </left>
-         <right>
-            <HBox id="encryptSepHBox" BorderPane.alignment="CENTER">
-               <children>
-                  <Button id="cryptosystemVariableBtn" fx:id="cryptosystemVariableBtn" mnemonicParsing="false" onMouseClicked="#cryptosystemVariableBtnOnMouseClicked" prefHeight="40.0" prefWidth="100.0" text="Encrypt" />
-               </children>
-            </HBox>
-         </right>
-         <opaqueInsets>
-            <Insets />
-         </opaqueInsets>
-      </BorderPane>
    </children>
-</VBox>
+</StackPane>
