--- a/src/main/java/projects/encryptor/view/CryptographerGUI.fxml
+++ b/src/main/java/projects/encryptor/view/CryptographerGUI.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<StackPane fx:id="wrapStackPane" prefHeight="700.0" prefWidth="900.0" style="-fx-background-color: #515C6B;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="projects.encryptor.gui.CryptographerGUIController">
+<StackPane fx:id="wrapStackPane" prefHeight="700.0" prefWidth="900.0" style="-fx-background-color: #515C6B;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="projects.encryptor.controller.CryptographerGUIController">
    <children>
       <VBox id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="900.0" style="-fx-background-color: #4d5766;">
          <children>
